syntax = "proto3";

package testgrpc.stream;

option go_package = "github.com/open-panoptes/opni/pkg/test/testgrpc";

service StreamService {
  rpc Stream(stream StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
  string request = 1;
}

message StreamResponse {
  string response = 1;
}
